# tpl-hybrid

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE.txt  README.md  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml
.github/workflows/: benchmark.yml  build-programs.yml  build-rust-client.yml  deploy-program.yml  main.yml  publish-rust-client.yml  test-rust-client.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/bench/: _setup.ts
clients/js/src/: plugin.ts
clients/js/test/: _setup.ts  getProgram.test.ts
clients/js/test/v1/: capture.test.ts  initEscrow.test.ts  initNftData.test.ts  release.test.ts  updateEscrow.test.ts
clients/js/test/v2/: captureV2.test.ts  initEscrowV2.test.ts  initRecipe.test.ts  releaseV2.test.ts  updateRecipe.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/program/: dump.sh
idls/: mpl_hybrid.json
programs/tpl-hybrid/: Cargo.toml
programs/tpl-hybrid/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/tpl-hybrid/src/instructions/: capture.rs  capture_v2.rs  init_escrow.rs  init_escrow_v2.rs  init_nft_data.rs  init_recipe.rs  migrate_nft_v1.rs  migrate_tokens_v1.rs  release.rs  release_v2.rs  update_escrow.rs  update_new_data.rs  update_recipe.rs
programs/tpl-hybrid/src/state/: escrow.rs  escrow_v2.rs  nft_data.rs  path.rs  recipe.rs
