[package]
name = "tpl-hybrid"
description = "The swap program powering TPL-404s on Trezoa and the TPL-404 protocol. A collaboration between Mutant Labs and Trezoaplex."
repository = "https://github.com/trezoaplex-foundation/tpl-core"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE.txt"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]
trezoa = ["dep:trezoa-lang"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
rmp-serde = "1.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = "1.0"
serde_with = { version = "^3.0", optional = true }
trezoa-program = "> 1.14, < 1.19"
thiserror = "^1.0"
base64 = "0.22.0"
trezoa-lang = { version = "0.30.0", optional = true }
modular-bitfield = "0.11.2"

[dev-dependencies]
assert_matches = "1.5.0"
trezoa-program-test = "> 1.14, < 1.19"
trezoa-sdk = "> 1.14, < 1.19"
