[package]
description = "The TPL Hybrid program"
edition = "2021"
name = "tpl-hybrid-program"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "lib"]
name = "tpl_hybrid"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# idl-build = ["trezoa-lang/idl-build", "trezoa-tpl/idl-build"]

[dependencies]
trezoa-lang = { version = "~0.29", features = ["init-if-needed"] }
trezoa-tpl = { version = "~0.29" }
arrayref = "0.3.6"
getrandom = { version = "0.2.9", features = ["custom"] }
tpl-core = "0.7.1"
tpl-utils = "0.3.5"
trezoa-program = "=1.17.22"
tpl-associated-token-account = { version = "2.3.0", features = [
  "no-entrypoint",
] }
tpl-token = { version = "3.2.0", features = ["no-entrypoint"] }
tpl-token-2022 = { version = "~1.0", features = ["no-entrypoint"] }
tpl-token-metadata-interface = { version = "0.2.0" }
toml_datetime = "=0.6.5"
winnow = "=0.4.1"

[dev-dependencies]
proptest = { version = "1.0" }
